# TestTask-MongoDB

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
scripts/: mongo-init.js
src/: __init__.py  database.py  main.py  settings.py
src/forms/: router.py  schemes.py  services.py  utils.py
